--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #C3A4F0;
+            background-color: rgba(33, 8, 52, 80);;
             color: white;
             padding: 0 1rem;
         }
@@ -34,7 +34,7 @@
         }
 
         h1 {
-            color: #C3A4F0;
+            color: rgba(33, 8, 52, 80);;
         }
 
         .item img{
