--- a/views/galery/index.html
+++ b/views/galery/index.html
@@ -135,7 +135,7 @@
 <script type="module">
     import { io } from "socket.io-client";
 
-    const socket = io("ws://spider-ff0e.onrender.com");
+    const socket = io("https://spider-ff0e.onrender.com");
     
 
     socket.on("connect", () => {
