--- a/views/user/contact.html
+++ b/views/user/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" languague="javascript" src="./errorHandlerHtml.js"></script>
-    <title>Spider - New Image</title>
+    <title>Document</title>
     <style>
         body {
             text-align: center;
@@ -74,13 +74,21 @@
             outline:none;
         }
 
+        form textarea:focus {
+            outline:none;
+        }
+
+        form textarea {
+            margin-top: 10px;
+            min-height: 1.5rem;
+            border: none;
+            border-bottom: solid 0.1rem rgba(33, 8, 52, 80);;
+        }
+
         h1 {
             color: rgba(33, 8, 52, 80);
             margin-top: 2rem;
         }
-
-        
-        
     </style>
 </head>
 <body>
@@ -92,17 +100,16 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <div>
-            <h1>Spider - New Image</h1>
-            <form action="/new-image" method="post">
-               <input type="text" name="url" placeholder="URL" required>
-               <input type="text" name="caption" placeholder="Caption" required>
-               <button>Upload</button>
-            </form>
-            <div id="error-msg" class="hidden">
-                <p></p>
-            </div>
-        </div>
+
+    <h1>Kontakt</h1>
+    <form action="/contact" method="post">
+        <input type="email" name="email" placeholder="Your E-mail" required>
+        <textarea name="text" cols="30" rows="5" placeholder="Text" required></textarea>
+        <button type="submit">Send</button>
+    </form>
+
+    <div id="error-msg" class="hidden">
+        <p></p>
+    </div>
 </body>
 </html>
