--- a/views/galery/index.html
+++ b/views/galery/index.html
@@ -105,6 +105,31 @@
             color: #666;
             margin: 0.5rem 0;
         }
+
+        footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: rgba(33, 8, 52, 80);
+            color: white;
+        }
+
+        footer li {
+            list-style: none;
+        }
+
+        footer div {
+            margin: 0 3rem;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+        }
     </style>
 </head>
 <body>
@@ -124,6 +149,18 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div>
+            <p>Spider - 2023</p>
+            <p>&copy Pr1v4cy</p>
+        </div>
+        <div>
+            <h4>Contact</h4>
+            <ul>
+                <li><p> Discord: OoSpideroO#5203</p></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 <script type="importmap">
     {
