--- a/views/user/contact.html
+++ b/views/user/contact.html
@@ -89,6 +89,32 @@
             color: rgba(33, 8, 52, 80);
             margin-top: 2rem;
         }
+
+        footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: rgba(33, 8, 52, 80);
+            color: white;
+        }
+
+        footer li {
+            list-style: none;
+        }
+
+        footer div {
+            margin: 0 3rem;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
     </style>
 </head>
 <body>
@@ -101,7 +127,7 @@
         </nav>
     </header>
 
-    <h1>Kontakt</h1>
+    <h1>Spider - Contact</h1>
     <form action="/contact" method="post">
         <input type="email" name="email" placeholder="Your E-mail" required>
         <textarea name="text" cols="30" rows="5" placeholder="Text" required></textarea>
@@ -111,5 +137,18 @@
     <div id="error-msg" class="hidden">
         <p></p>
     </div>
+
+    <footer>
+        <div>
+            <p>Spider - 2023</p>
+            <p>&copy Pr1v4cy</p>
+        </div>
+        <div>
+            <h4>Contact</h4>
+            <ul>
+                <li><p> Discord: OoSpideroO#5203</p></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
