--- a/views/user/login.html
+++ b/views/user/login.html
@@ -74,6 +74,30 @@
             outline:none;
         }
 
+        footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: rgba(33, 8, 52, 80);
+            color: white;
+        }
+
+        footer li {
+            list-style: none;
+        }
+
+        footer div {
+            margin: 0 3rem;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+        }
     </style>
 </head>
 <body>
@@ -93,5 +117,17 @@
     <div id="error-msg" class="hidden">
         <p></p>
     </div>
+    <footer>
+        <div>
+            <p>Spider - 2023</p>
+            <p>&copy Pr1v4cy</p>
+        </div>
+        <div>
+            <h4>Contact</h4>
+            <ul>
+                <li><p> Discord: OoSpideroO#5203</p></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
