--- a/views/galery/index.html
+++ b/views/galery/index.html
@@ -9,6 +9,9 @@
             text-align: center;
         }
 
+         /* error
+        **********************************************************/
+
         .hidden {
             display: none;
         }
@@ -18,6 +21,9 @@
         .success {
             color: green;
         }
+
+        /* navigation
+        **********************************************************/
 
         nav {
             display: flex;
@@ -46,6 +52,9 @@
         nav a:hover {
             text-decoration: underline;
         }
+
+        /* form
+        **********************************************************/
 
         form {
             display: inline-flex;
@@ -82,29 +91,84 @@
         ********************************************/
 
         #gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            grid-gap: 1rem;
-            margin: 1rem;
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: repeat(3, 1fr);
+                width: 900px;
+                grid-gap: 0.5rem;
+                margin: 0 auto;
         }
 
         #gallery .item {
-            border: 1px solid #ccc;
-            padding: 10px;
-            background: #fff;
+            position: relative;
+            padding-bottom: 100%;
         }
 
-        #gallery .item img {
+        #gallery img {
+            height: 100%;
             width: 100%;
-            height: auto;
+            object-fit: cover;
+            left: 0;
+            position: absolute;
+            top: 0;
         }
 
-        #gallery .item figcaption {
-            text-align: left;
-            font-size: 0.8rem;
-            color: #666;
-            margin: 0.5rem 0;
+        #gallery .item figcaption{
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: rgba(33, 8, 52, 80);
+            color: white;
+            margin: 0;
         }
+
+        @media screen and (min-width: 1250px) {
+            #gallery {
+                display: grid;
+                grid-template-columns: repeat(4, 1fr);
+                grid-template-rows: repeat(4, 1fr);
+                width: 1200px;
+                grid-gap: 0.5rem;
+                margin: 0 auto;
+            }
+        }
+
+        @media screen and (max-width: 950px) {
+            #gallery {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(2, 1fr);
+                width: 600px;
+                grid-gap: 0.5rem;
+                margin: 0 auto;
+            }
+        }
+
+        @media screen and (max-width: 650px) {
+            #gallery {
+                display: grid;
+                grid-template-columns: repeat(1, 1fr);
+                grid-template-rows: repeat(1, 1fr);
+                width: 300px;
+                grid-gap: 0.5rem;
+                margin: 0 auto;
+            }
+        }
+
+        @media screen and (min-width: 1550px) {
+            #gallery {
+                display: grid;
+                grid-template-columns: repeat(5, 1fr);
+                grid-template-rows: repeat(5, 1fr);
+                width: 1500px;
+                grid-gap: 0.5rem;
+                margin: 0 auto;
+            }
+        }
+
+        /* footer
+        ********************************************/
 
         footer {
             position: fixed;
@@ -173,6 +237,7 @@
     import { io } from "socket.io-client";
 
     const socket = io("https://spider-ff0e.onrender.com");
+    // const socket = io("http://localhost:3000");
     
 
     socket.on("connect", () => {
@@ -192,16 +257,19 @@
                 var figure = document.createElement("figure");
                 var figcaption = document.createElement("figcaption");
                 var img = document.createElement("img");
+                var a = document.createElement("a");
 
                 img.src = element.link;
                 img.alt = element.caption;
                 figcaption.innerHTML = element.caption;
+                a.href = "/galery/" + element.id;
                 item.classList.add('item')
 
                 figure.appendChild(img);
                 figure.appendChild(figcaption);
                 item.appendChild(figure);
-                document.getElementById("gallery").appendChild(item);
+                a.appendChild(item);
+                document.getElementById("gallery").appendChild(a);
             });
         });
     });
