--- a/views/galery/detail.html
+++ b/views/galery/detail.html
@@ -202,8 +202,8 @@
 <script type="module">
     import { io } from "socket.io-client";
 
-    // const socket = io("https://spider-ff0e.onrender.com");
-    const socket = io("http://localhost:3000");
+    const socket = io("https://spider-ff0e.onrender.com");
+    // const socket = io("http://localhost:3000");
     
 
     socket.on("connect", () => {
