--- a/views/galery/index.html
+++ b/views/galery/index.html
@@ -236,8 +236,8 @@
 <script type="module">
     import { io } from "socket.io-client";
 
-    // const socket = io("https://spider-ff0e.onrender.com");
-    const socket = io("http://localhost:3000");
+    const socket = io("https://spider-ff0e.onrender.com");
+    // const socket = io("http://localhost:3000");
     
 
     socket.on("connect", () => {
