subtil Design changes

--- a/views/galery/newImage.html
+++ b/views/galery/newImage.html
@@ -117,7 +117,7 @@
     </header>
     <main>
         <div>
-            <h1>Spider - New Image</h1>
+            <h1>NEW IMAGE</h1>
             <form action="/new-image" method="post">
                <input type="text" name="url" placeholder="URL" required>
                <input type="text" name="caption" placeholder="Caption" required>
