--- a/views/user/contact.html
+++ b/views/user/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" languague="javascript" src="./errorHandlerHtml.js"></script>
-    <title>Document</title>
+    <title>Spider - Contact</title>
     <style>
         body {
             text-align: center;
@@ -127,7 +127,7 @@
         </nav>
     </header>
 
-    <h1>Spider - Contact</h1>
+    <h1>CONTACT</h1>
     <form action="/contact" method="post">
         <input type="email" name="email" placeholder="Your E-mail" required>
         <textarea name="text" cols="30" rows="5" placeholder="Text" required></textarea>
