--- a/views/user/login.html
+++ b/views/user/login.html
@@ -109,6 +109,8 @@
             </ul>
         </nav>
     </header>
+    <h1>LOGIN</h1>
+
     <form action="/login" method="post">
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
