--- a/views/galery/detail.html
+++ b/views/galery/detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spider - Detail</title>
     <style>
         body {
             text-align: center;
@@ -173,7 +173,7 @@
     </header>
     <main>
         <div>
-            <h1>Spider - Detail</h1>
+            <h1>DETAIL</h1>
             <div id="gallery">
                 
             </div>
