--- a/views/galery/index.html
+++ b/views/galery/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spider - galery</title>
+    <title>Spider - Galery</title>
     <style>
         body {
             text-align: center;
@@ -207,7 +207,7 @@
     </header>
     <main>
         <div>
-            <h1>Spider - Galery</h1>
+            <h1>GALERY</h1>
             <div id="gallery">
                 
             </div>
