--- a/views/galery/detail.html
+++ b/views/galery/detail.html
@@ -202,7 +202,7 @@
 <script type="module">
     import { io } from "socket.io-client";
 
-    const socket = io("https://spider-ff0e.onrender.com");
+    const socket = io("https://spider-art-galery.onrender.com");
     // const socket = io("http://localhost:3000");
     
 
