--- a/views/galery/index.ejs
+++ b/views/galery/index.ejs
@@ -4,218 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" languague="javascript" src="./errorHandlerHtml.js"></script>
+    <link rel="stylesheet" href="/css/images.css">
+    <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="/css/error.css">
+    <link rel="stylesheet" href="/css/banner.css">
     <title>Spider - Galery</title>
     <style>
         body {
             text-align: center;
         }
 
-         /* error
-        **********************************************************/
-
-        .hidden {
-            display: none;
-        }
-        .error {
-            color: red;
-        }
-        .success {
-            color: green;
-        }
-
-        /* navigation
-        **********************************************************/
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: rgba(33, 8, 52, 80);
-            color: white;
-            padding: 0 1rem;
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        nav ul li {
-            list-style: none;
-            margin: 0 1rem;
-        }
-
-        nav a {
-            color: #FFF;
-            text-decoration: none;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        /* form
-        **********************************************************/
-
-        form {
-            display: inline-flex;
-            flex-direction: column;
-            width: 15rem;
-            margin-top: 6rem;
-        }
-
-        form input { 
-            margin-top: 10px;
-            min-height: 1.5rem;
-            border: none;
-            border-bottom: solid 0.1rem rgba(33, 8, 52, 80);;
-        }
-
-        form button {
-            margin-top: 15px;
-            min-height: 2rem;
-            border:none;
-            background-color: rgba(33, 8, 52, 80);
-            color: #FFF;
-        }
-
-        form input:focus {
-            outline:none;
-        }
-
         h1 {
             color: rgba(33, 8, 52, 80);
             margin-top: 2rem;
-        }
-
-        /* Imgaes
-        ********************************************/
-
-        #gallery {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: repeat(3, 1fr);
-            width: 900px;
-            grid-gap: 0.5rem;
-            margin-bottom: 10rem;
-        }
-
-        #gallery .item {
-            position: relative;
-            padding-bottom: 100%;
-        }
-
-        #gallery img {
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-            left: 0;
-            position: absolute;
-            top: 0;
-        }
-
-        #gallery .item figcaption{
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: rgba(33, 8, 52, 80);
-            color: white;
-            margin: 0;
-        }
-
-        @media screen and (min-width: 1250px) {
-            #gallery {
-                display: grid;
-                grid-template-columns: repeat(4, 1fr);
-                grid-template-rows: repeat(4, 1fr);
-                width: 1200px;
-                grid-gap: 0.5rem;
-                margin: 0 auto;
-                margin-bottom: 10rem;
-            }
-        }
-
-        @media screen and (max-width: 950px) {
-            #gallery {
-                display: grid;
-                grid-template-columns: repeat(2, 1fr);
-                grid-template-rows: repeat(2, 1fr);
-                width: 600px;
-                grid-gap: 0.5rem;
-                margin: 0 auto;
-                margin-bottom: 10rem;
-            }
-        }
-
-        @media screen and (max-width: 650px) {
-            #gallery {
-                display: grid;
-                grid-template-columns: repeat(1, 1fr);
-                grid-template-rows: repeat(1, 1fr);
-                width: 300px;
-                grid-gap: 0.5rem;
-                margin: 0 auto;
-                margin-bottom: 10rem;
-            }
-        }
-
-        @media screen and (min-width: 1550px) {
-            #gallery {
-                display: grid;
-                grid-template-columns: repeat(5, 1fr);
-                grid-template-rows: repeat(5, 1fr);
-                width: 1500px;
-                grid-gap: 0.5rem;
-                margin: 0 auto;
-                margin-bottom: 10rem;
-            }
-        }
-
-        /* footer
-        ********************************************/
-
-        footer {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: rgba(33, 8, 52, 80);
-            color: white;
-        }
-
-        footer li {
-            list-style: none;
-        }
-
-        footer div {
-            margin: 0 3rem;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-         /* Banner
-        ******************************************************************/
-
-        #banner {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            padding: 0 1rem;
-        }
-
-        #banner img {
-            max-width: 80%;
-            width: 90rem;
-            height: 10rem;
-            margin-top: -1rem;
         }
     </style>
 </head>
