--- a/views/user/login.html
+++ b/views/user/login.html
@@ -4,121 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" languague="javascript" src="./errorHandlerHtml.js"></script>
+    <link rel="stylesheet" href="/css/navigation.css">
+    <link rel="stylesheet" href="/css/error.css">
+    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="/css/banner.css">
     <title>Spider - Login</title>
     <style>
         body {
             text-align: center;
         }
 
-        .hidden {
-            display: none;
-        }
-        .error {
-            color: red;
-        }
-        .success {
-            color: green;
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: rgba(33, 8, 52, 80);
-            color: white;
-            padding: 0 1rem;
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        nav ul li {
-            list-style: none;
-            margin: 0 1rem;
-        }
-
-        nav a {
-            color: #FFF;
-            text-decoration: none;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        /* form
-        **********************************/
-
-        form {
-            display: inline-flex;
-            flex-direction: column;
-            width: 15rem;
-            margin-top: 4rem;
-        }
-
-        form input { 
-            margin-top: 10px;
-            min-height: 1.5rem;
-            border: none;
-            border-bottom: solid 0.1rem rgba(33, 8, 52, 80);;
-        }
-
-        form button {
-            margin-top: 15px;
-            min-height: 2rem;
-            border:none;
-            background-color: rgba(33, 8, 52, 80);
-            color: #FFF;
-        }
-
-        form input:focus {
-            outline:none;
-        }
-
-        footer {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: rgba(33, 8, 52, 80);
-            color: white;
-        }
-
-        footer li {
-            list-style: none;
-        }
-
-        footer div {
-            margin: 0 3rem;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Banner
-        ******************************************************************/
-
-        #banner {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            padding: 0 1rem;
-        }
-
-        #banner img {
-            max-width: 80%;
-            width: 90rem;
-            height: 10rem;
-            margin-top: -1rem;
-        }
     </style>
 </head>
 <body>
