login bug fixed

--- a/views/galery/index.ejs
+++ b/views/galery/index.ejs
@@ -57,13 +57,11 @@
     </main>
     <footer>
         <div>
-            <p>Spider - 2023</p>
             <p>&copy Pr1v4cy</p>
         </div>
         <div>
-            <h4>Contact</h4>
             <ul>
-                <li><p> Discord: OoSpideroO#5203</p></li>
+                <li><p>OoSpideroO#5203</p></li>
             </ul>
         </div>
     </footer>
