--- a/views/user/login.html
+++ b/views/user/login.html
@@ -43,13 +43,11 @@
     </div>
     <footer>
         <div>
-            <p>Spider - 2023</p>
             <p>&copy Pr1v4cy</p>
         </div>
         <div>
-            <h4>Contact</h4>
             <ul>
-                <li><p> Discord: OoSpideroO#5203</p></li>
+                <li><p>OoSpideroO#5203</p></li>
             </ul>
         </div>
     </footer>
