--- a/views/user/settings.html
+++ b/views/user/settings.html
@@ -8,8 +8,42 @@
     <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/banner.css">
     <title>Document</title>
+    <style>
+        body {
+            text-align: center;
+        }
+
+        h1 {
+            color: rgba(33, 8, 52, 80);
+            margin-top: 2rem;
+        }
+    </style>
 </head>
 <body>
-    <p>test</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/galery">Galery</a></li>
+                <li><a href="/price-list">Price list</a></li>
+            </ul>
+        </nav>
+        <div id="banner">
+            <figure>
+                <img src="../../images/me_closed_2.png" alt="Banner">
+            </figure>
+        </div>
+    </header>
+    <h1>Settings</h1>
+    <footer>
+        <div>
+            <p>&copy Pr1v4cy</p>
+        </div>
+        <div>
+            <ul>
+                <li><p>OoSpideroO#5203</p></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
