--- a/views/galery/detail.ejs
+++ b/views/galery/detail.ejs
@@ -45,7 +45,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/home">Home</a></li>
+                <li><a href="/home">About Me</a></li>
                 <li><a href="/galery">Galery</a></li>
                 <li><a href="/price-list">Price list</a></li>
             </ul>
