--- a/public/css/banner.css
+++ b/public/css/banner.css
@@ -11,4 +11,7 @@
     width: 90rem;
     height: 10rem;
     margin-top: -1rem;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.5);
 }
+
