--- a/public/css/banner.css
+++ b/public/css/banner.css
@@ -7,11 +7,10 @@
 }
 
 #banner img {
-    max-width: 80%;
-    width: 90rem;
-    height: 10rem;
+    position: relative;
+    max-width: 100vw;
+    width: 100vw;
+    height: 160px;
     margin-top: -1rem;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
-    border: 1px solid rgba(0, 0, 0, 0.5);
 }
-
