adding page and basic outline

--- a/views/user/settings.html
+++ b/views/user/settings.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/navigation.css">
     <link rel="stylesheet" href="/css/error.css">
     <link rel="stylesheet" href="/css/form.css">
-    <link rel="stylesheet" href="/css/banner.css">
+    <link rel="stylesheet" href="../../public/css/banner.css">
     <title>Document</title>
     <style>
         body {
@@ -30,7 +30,7 @@
         </nav>
         <div id="banner">
             <figure>
-                <img src="../../images/me_closed_2.png" alt="Banner">
+                <img src="../../images/me_open_2.png" alt="Banner">
             </figure>
         </div>
     </header>
