--- a/views/user/login.html
+++ b/views/user/login.html
@@ -27,7 +27,7 @@
         </nav>
         <div id="banner">
             <figure>
-                <img src="../../images/me_closed_2.png" alt="Banner">
+                <img src="../../images/me_open_2.png" alt="Banner">
             </figure>
         </div>
     </header>
