--- a/views/user/priceList.html
+++ b/views/user/priceList.html
@@ -3,41 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" languague="javascript" src="./errorHandlerHtml.js"></script>
     <link rel="stylesheet" href="/css/navigation.css">
     <link rel="stylesheet" href="/css/error.css">
+    <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/banner.css">
-    <title>Spider - Detail</title>
+    <title>Spider - Price List</title>
     <style>
         body {
             text-align: center;
-        }
-
-        /* image
-        **********************************************************/
-
-        #gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 10rem;
-        }
-
-        #gallery figure img {
-            max-height: 38rem;
-            max-width: 38rem;
-            width: 100%;
-            height: auto; 
-        }
-
-        #gallery figcaption {
-            background-color: rgba(33, 8, 52, 80);
-            color: #FFF;
-        }
-
-        h1 {
-            color: rgba(33, 8, 52, 80);
-            margin-top: 2rem;
         }
     </style>
 </head>
@@ -56,17 +30,13 @@
             </figure>
         </div>
     </header>
-    <main>
-        <div>
-            <h1>DETAIL</h1>
-            <div id="gallery">
-                <figure>
-                    <img src="<%= image.url %>" alt="<%= image.caption %>">
-                    <figcaption><%= image.caption %></figcaption>
-                </figure>
-            </div>
-        </div>
-    </main>
+    <h1>PRICE LIST</h1>
+
+    <div class="example">
+        <img src="https://www.americanexpress.com/de-de/amexcited/media/webp/de-de/amexcited/media/cache/article_intro_hero/cms/2022/01/Schwarz-Weiss-Fotografie-Titelbild-scaled.webp?749573" alt="alt">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolores minima voluptatibus sequi eos itaque voluptatum ducimus mollitia eaque molestiae, accusamus iure numquam voluptatem, ipsum aspernatur. Repellendus ad similique molestiae?</p>
+    </div>
+
     <footer>
         <div>
             <p>&copy Pr1v4cy</p>
@@ -78,5 +48,4 @@
         </div>
     </footer>
 </body>
-</script>
 </html>
