--- a/views/user/settings.ejs
+++ b/views/user/settings.ejs
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" languague="javascript" src="./errorHandlerHtml.js"></script>
     <link rel="stylesheet" href="/css/navigation.css">
     <link rel="stylesheet" href="/css/error.css">
     <link rel="stylesheet" href="/css/form.css">
-    <link rel="stylesheet" href="../../public/css/banner.css">
+    <link rel="stylesheet" href="/css/banner.css">
     <title>Document</title>
     <style>
         body {
@@ -17,6 +18,18 @@
             color: rgba(33, 8, 52, 80);
             margin-top: 2rem;
         }
+
+        .settings {
+            margin-bottom: 5rem;
+        }
+
+        form {
+            margin: 3rem auto;
+            max-width: 30rem;
+            width: 30rem;
+            margin-top: -10rem;
+        }
+
     </style>
 </head>
 <body>
@@ -34,7 +47,24 @@
             </figure>
         </div>
     </header>
-    <h1>Settings</h1>
+        <h1>Settings</h1>
+        <div id="error-msg" class="hidden"><p></p></div>
+        <div class="settings">
+            <form action="/update-text" method="post">
+                <textarea name="text" cols="30" rows="4" placeholder="About Me Text" required></textarea>
+                <button type="submit">Update About Me Text</button>
+            </form>
+            <br>
+            <form action="/new-image" method="post">
+                <input type="text" name="url" placeholder="URL" required>
+                <input type="text" name="caption" placeholder="Caption" required>
+                <button>Upload New Image</button>
+            </form>
+            <br>
+            <form action="/update-banner">
+                
+            </form>
+        </div>
     <footer>
         <div>
             <p>&copy Pr1v4cy</p>
