--- a/views/galery/detail.ejs
+++ b/views/galery/detail.ejs
@@ -52,7 +52,7 @@
         </nav>
         <div id="banner">
             <figure>
-                <img src="../../images/me_open_2.png" alt="Banner">
+                <img src="<%= banner %>" alt="Banner">
             </figure>
         </div>
     </header>
