--- a/views/galery/index.ejs
+++ b/views/galery/index.ejs
@@ -46,7 +46,7 @@
         </nav>
         <div id="banner">
             <figure>
-                <img src="https://up.picr.de/46129439wa.png" alt="Banner">
+                <img src="<%= banner %>" alt="Banner">
             </figure>
         </div>
     </header>
