--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -36,7 +36,7 @@
         </nav>
         <div id="banner">
             <figure>
-                <img src="../../images/me_open_2.png" alt="Banner">
+                <img src="<%= banner %>" alt="Banner">
             </figure>
         </div>
     </header>
