--- a/views/galery/index.ejs
+++ b/views/galery/index.ejs
@@ -13,6 +13,7 @@
     <style>
         body {
             text-align: center;
+            background-color: #212529;
         }
 
         h1 {
@@ -32,6 +33,10 @@
             position: absolute; top:0; left:100; margin:140px 0px 0px 130px;
             margin-top: -0rem;
             margin-left: 6.9rem;
+        }
+
+        main {
+            height: fit-content;
         }
     </style>
 </head>
