--- a/views/galery/detail.ejs
+++ b/views/galery/detail.ejs
@@ -10,6 +10,7 @@
     <style>
         body {
             text-align: center;
+            background-color: #212529;
         }
 
         /* image
