--- a/views/user/priceList.ejs
+++ b/views/user/priceList.ejs
@@ -8,16 +8,12 @@
     <link rel="stylesheet" href="/css/error.css">
     <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/banner.css">
+    <link rel="stylesheet" href="/css/header.css">
     <title>Spider - Price List</title>
     <style>
         body {
             text-align: center;
             background-color: #212529;
-        }
-
-        h1 {
-            color: rgba(33, 8, 52, 80);
-            margin-top: 2rem;
         }
 
         .example {
