--- a/views/galery/detail.ejs
+++ b/views/galery/detail.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/navigation.css">
     <link rel="stylesheet" href="/css/error.css">
     <link rel="stylesheet" href="/css/banner.css">
+    <link rel="stylesheet" href="/css/header.css">
     <title>Spider - Detail</title>
     <style>
         body {
@@ -34,11 +35,6 @@
         #gallery figcaption {
             background-color: rgba(33, 8, 52, 80);
             color: #FFF;
-        }
-
-        h1 {
-            color: rgba(33, 8, 52, 80);
-            margin-top: 2rem;
         }
     </style>
 </head>
