--- a/views/galery/index.ejs
+++ b/views/galery/index.ejs
@@ -9,16 +9,12 @@
     <link rel="stylesheet" href="/css/navigation.css">
     <link rel="stylesheet" href="/css/error.css">
     <link rel="stylesheet" href="/css/banner.css">
+    <link rel="stylesheet" href="/css/header.css">
     <title>Spider - Galery</title>
     <style>
         body {
             text-align: center;
             background-color: #212529;
-        }
-
-        h1 {
-            color: rgba(33, 8, 52, 80);
-            margin-top: 2rem;
         }
 
         figcaption {
