--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/error.css">
     <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/banner.css">
+    <link rel="stylesheet" href="/css/header.css">
     <title>Spider - Login</title>
     <style>
         body {
