--- a/views/user/settings.ejs
+++ b/views/user/settings.ejs
@@ -9,16 +9,12 @@
     <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/banner.css">
     <link rel="stylesheet" href="/css/switch.css">
+    <link rel="stylesheet" href="/css/header.css">
     <title>Document</title>
     <style>
         body {
             text-align: center;
             background-color: #212529;
-        }
-
-        h1 {
-            color: rgba(33, 8, 52, 80);
-            margin-top: 2rem;
         }
 
         .settings {
