--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -16,6 +16,10 @@
             background-color: #212529;
         }
 
+        input {
+            background-color: #212529;
+            color: #FFF;
+        }
     </style>
 </head>
 <body>
