--- a/views/user/settings.ejs
+++ b/views/user/settings.ejs
@@ -29,16 +29,27 @@
         }
 
         h3 {
-            color: rgba(33, 8, 52, 80);
+            color: #FFF;
         }
 
         hr {
             margin-top: -1rem;
             margin-bottom: 1rem;
             width: 10%;
-            background-color: rgba(33, 8, 52, 80);
+            background-color: #FFF;
             height: 0.1rem;
             border: none;
+        }
+
+        input {
+            background-color: #212529;
+            color: #FFF;
+        }
+
+        textarea {
+            background-color: #212529;
+            border-color: rgba(33, 8, 52, 80);
+            color: #FFF;
         }
 
     </style>
@@ -74,7 +85,7 @@
             <hr>
             <form action="/new-image" method="post">
                 <input type="text" name="url" placeholder="URL" required>
-                <input type="text" name="caption" placeholder="Caption" required>
+                <input type="text" name="caption" placeholder="Caption">
                 <button>Upload New Image</button>
             </form>
             <br>
