stage 1 changes. Going life

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/banner.css">
     <link rel="stylesheet" href="/css/header.css">
-    <title>Document</title>
+    <title>Spider - About Me</title>
     <style>
         body {
             text-align: center;
@@ -19,6 +19,7 @@
             margin: 3rem auto;
             max-width: 30rem;
             width: 30rem;
+            color: #FFF;
         }
     </style>
 </head>
