--- a/views/user/priceList.ejs
+++ b/views/user/priceList.ejs
@@ -21,20 +21,32 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            margin: 2rem;
-            margin-bottom: 4rem;
+            color: #FFF;
+            border: #FFF 1px solid;
+            background-color: rgba(33, 8, 52, 80);
+            margin: 3rem auto;
+            max-width: 40rem;
+            margin-bottom: 7rem;
         }
 
         .example img {
             width: 50%;
             height: 50%;
-            margin: 0.5rem;
+        }
+
+        .example p {
+            margin: 0;
+            padding: 0;
         }
         
-        .example p {
-            text-align: start;
-            margin: 2rem;
+        .example .text {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 50%;
         }
+
     </style>
 </head>
 <body>
@@ -54,25 +66,18 @@
     </header>
     <h1>PRICE LIST</h1>
 
-    <div class="example">
-        <img src="https://www.americanexpress.com/de-de/amexcited/media/webp/de-de/amexcited/media/cache/article_intro_hero/cms/2022/01/Schwarz-Weiss-Fotografie-Titelbild-scaled.webp?749573" alt="alt">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cupiditate distinctio ut animi sed eveniet excepturi dolorem dolor accusantium. Perferendis laboriosam molestiae similique hic. Minus similique totam placeat tempora vero.</p>
-    </div>
-
-    <div class="example">
-        <img src="https://www.americanexpress.com/de-de/amexcited/media/webp/de-de/amexcited/media/cache/article_intro_hero/cms/2022/01/Schwarz-Weiss-Fotografie-Titelbild-scaled.webp?749573" alt="alt">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolores minima voluptatibus sequi eos itaque voluptatum ducimus mollitia eaque molestiae, accusamus iure numquam voluptatem, ipsum aspernatur. Repellendus ad similique molestiae?</p>
-    </div>
-
-    <div class="example">
-        <img src="https://www.americanexpress.com/de-de/amexcited/media/webp/de-de/amexcited/media/cache/article_intro_hero/cms/2022/01/Schwarz-Weiss-Fotografie-Titelbild-scaled.webp?749573" alt="alt">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolores minima voluptatibus sequi eos itaque voluptatum ducimus mollitia eaque molestiae, accusamus iure numquam voluptatem, ipsum aspernatur. Repellendus ad similique molestiae?</p>
-    </div>
-
-    <div class="example">
-        <img src="https://www.americanexpress.com/de-de/amexcited/media/webp/de-de/amexcited/media/cache/article_intro_hero/cms/2022/01/Schwarz-Weiss-Fotografie-Titelbild-scaled.webp?749573" alt="alt">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolores minima voluptatibus sequi eos itaque voluptatum ducimus mollitia eaque molestiae, accusamus iure numquam voluptatem, ipsum aspernatur. Repellendus ad similique molestiae?</p>
-    </div>
+    <% for (var i=0; i<prices.length; i++) { %>
+        <div class="example">
+            <img src="<%= prices[i].url %>" alt="alt">
+            <div class="text">
+                    <p><%= prices[i].tag1 %></p>
+                    <p><%= prices[i].tag2 %></p>
+                    <p><%= prices[i].tag3 %></p>
+                    <p><%= prices[i].tag4 %></p>
+                    <p><%= prices[i].tag5 %></p>
+            </div>
+        </div>
+    <% } %>
 
     <footer>
         <div>
