adding pruple line

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -24,6 +24,11 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                
+            </ul>
+        </nav>
         <div id="banner">
             <figure>
                 <img src="<%= banner %>" alt="Banner">
