--- a/views/user/priceList.ejs
+++ b/views/user/priceList.ejs
@@ -58,6 +58,11 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                
+            </ul>
+        </nav>
         <div id="banner">
             <figure>
                 <img src="<%= banner %>" alt="Banner">
