--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -40,6 +40,7 @@
                 <li><a href="/home">About Me</a></li>
                 <li><a href="/galery">Galery</a></li>
                 <li><a href="/price-list">Price list</a></li>
+                <li><a href="/payment">Payment / Patreon</a></li>
             </ul>
         </nav>
     </header>
