--- a/views/user/priceList.ejs
+++ b/views/user/priceList.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/banner.css">
     <link rel="stylesheet" href="/css/header.css">
     <title>Spider - Price List</title>
-    <style>
+    <style> 
         body {
             text-align: center;
             background-color: #212529;
@@ -54,6 +54,10 @@
             align-items: center;
             flex-wrap: wrap;
         }
+
+        form button {
+            float: left;
+        }
     </style>
 </head>
 <body>
@@ -73,6 +77,7 @@
                 <li><a href="/home">About Me</a></li>
                 <li><a href="/galery">Galery</a></li>
                 <li><a href="/price-list">Price list</a></li>
+                <li><a href="/payment">Payment / Patreon</a></li>
             </ul>
         </nav>
     </header>
@@ -80,6 +85,7 @@
 
     <div id="prices">
         <% for (var i=0; i<prices.length; i++) { %>
+            
             <div class="example">
                 <img src="<%= prices[i].url %>" alt="alt">
                 <div class="text">
