delete prices feature

--- a/views/payment/payment.ejs
+++ b/views/payment/payment.ejs
@@ -47,7 +47,9 @@
             padding-bottom: 1rem;
         }
 
-        
+        p {
+            color: #FFF;
+        }
 
     </style>
 </head>
@@ -85,8 +87,8 @@
 
     <div class="support-me">
         <h1>SUPPORT ME</h1>
-        <a href="https://www.patreon.com">Patreon: </a>
-        <a href="https://www.paypal.com">Paypal: </a>
+        <p>Patreon:<a href="https://www.patreon.com"> Patreon.me</a></p>
+        <p>Patreon:<a href="https://www.paypal.com"> Paypal.me</a></p>
     </div>
 
     <footer>
