--- a/views/user/priceList.ejs
+++ b/views/user/priceList.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" languague="javascript" src="./errorHandlerHtml.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="/css/navigation.css">
     <link rel="stylesheet" href="/css/error.css">
     <link rel="stylesheet" href="/css/form.css">
@@ -24,9 +25,9 @@
             color: #FFF;
             border: #FFF 1px solid;
             background-color: rgba(33, 8, 52, 80);
-            margin: 3rem auto;
+            margin: 1rem auto;
             max-width: 40rem;
-            margin-bottom: 6rem;
+            margin-bottom: 5rem;
         }
 
         .example img {
@@ -45,6 +46,16 @@
             justify-content: center;
             align-items: center;
             width: 50%;
+        }
+
+        .example span {
+            width: 0.5rem;
+            margin-right: 8rem;
+        }
+
+        .example span button {
+            background-color: rgba(255,0,0,0);
+            padding-bottom: 0;
         }
 
         #prices {
@@ -95,6 +106,13 @@
                         <p><%= prices[i].tag4 %></p>
                         <p><%= prices[i].tag5 %></p>
                 </div>
+                <% if(isSpider)  { %>
+                    <span>
+                        <form action="/delete-price?id=<%= prices[i].id %>" method="post">
+                            <button class="material-symbols-outlined">delete</button>
+                        </form>
+                    </span>
+                <% } %>
             </div>
         <% } %>
     </div>
