last seen feature

--- a/views/galery/detail.ejs
+++ b/views/galery/detail.ejs
@@ -61,6 +61,7 @@
     </header>
     <main>
         <div>
+            <p><%= lastSeen %></p>
             <h1>DETAIL</h1>
             <div id="gallery">
                 <figure>
