--- a/views/galery/index.ejs
+++ b/views/galery/index.ejs
@@ -34,6 +34,10 @@
         main {
             height: fit-content;
         }
+
+        p {
+            color: #FFF;
+        }
     </style>
 </head>
 <body>
@@ -59,6 +63,7 @@
     </header>
     <main>
         <div>
+            <p><%= lastSeen %></p>
             <h1>GALERY</h1>
             <div id="error-msg" class="hidden">
                 <p></p>
