--- a/views/payment/payment.ejs
+++ b/views/payment/payment.ejs
@@ -74,21 +74,23 @@
             </ul>
         </nav>
     </header>
+
+    <p><%= lastSeen %></p>
     
     <div class="payment-types">
         <h1>PAYMENT TYPES</h1>
-        <a href="https://www.paypal.com">
+        <a href="https://www.paypal.com" target="_blank">
             <img src="https://cdn.pixabay.com/photo/2015/05/26/09/37/paypal-784404_1280.png" alt="paypal">
         </a>
-        <a href="https://www.patreon.com">
+        <a href="https://www.patreon.com" target="_blank">
             <img src="https://cdn.pixabay.com/photo/2015/05/26/09/37/paypal-784404_1280.png" alt="paypal">
         </a>
     </div>
 
     <div class="support-me">
         <h1>SUPPORT ME</h1>
-        <p>Patreon:<a href="https://www.patreon.com"> Patreon.me</a></p>
-        <p>Patreon:<a href="https://www.paypal.com"> Paypal.me</a></p>
+        <p>Patreon:<a href="https://www.patreon.com" target="_blank"> Patreon.me</a></p>
+        <p>Patreon:<a href="https://www.paypal.com" target="_blank"> Paypal.me</a></p>
     </div>
 
     <footer>
