--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -21,6 +21,10 @@
             width: 30rem;
             color: #FFF;
         }
+
+        p {
+            color: #FFF;
+        }
     </style>
 </head>
 <body>
@@ -44,6 +48,7 @@
             </ul>
         </nav>
     </header>
+    <p><%= lastSeen %></p>
     <h1>ABOUT ME</h1>
     <div id="abt_me_text">
         <p><%= abtMeText %></p>
