--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -20,6 +20,10 @@
             background-color: #212529;
             color: #FFF;
         }
+
+        p {
+            color: #FFF;
+        }
     </style>
 </head>
 <body>
@@ -43,6 +47,7 @@
             </ul>
         </nav>
     </header>
+    <p><%= lastSeen %></p>
     <h1>LOGIN</h1>
 
     <form action="/login" method="post">
