--- a/views/user/priceList.ejs
+++ b/views/user/priceList.ejs
@@ -69,6 +69,10 @@
         form button {
             float: left;
         }
+
+        p {
+            color: #FFF;
+        }
     </style>
 </head>
 <body>
@@ -92,6 +96,7 @@
             </ul>
         </nav>
     </header>
+    <p><%= lastSeen %></p>
     <h1>PRICE LIST</h1>
 
     <div id="prices">
