--- a/views/user/settings.ejs
+++ b/views/user/settings.ejs
@@ -57,6 +57,10 @@
             color: #FFF;
         }
 
+        p {
+            color: #FFF;
+        }
+
     </style>
 </head>
 <body>
@@ -80,6 +84,7 @@
             </ul>
         </nav>
     </header>
+        <p><%= lastSeen %></p>
         <h1>Settings</h1>
         <div id="error-msg" class="hidden"><p></p></div>
         <div class="settings">
